comments only to delivered products

--- a/src/app/dealers/orders/order-list/order-list.component.html
+++ b/src/app/dealers/orders/order-list/order-list.component.html
@@ -51,7 +51,7 @@
         </td>
 
         <td>{{item.totalPrice}}</td>
-        <td><button type="" routerLink="makeComment" (click)="send(item)">comentar</button></td>
+        <td><button *ngIf="item.state=='delivered'" type="" routerLink="makeComment" (click)="send(item)">comentar</button></td>
       </tr>
 
     </tbody>
