--- a/src/app/dealers/dashboard/dashboard.component.html
+++ b/src/app/dealers/dashboard/dashboard.component.html
@@ -1,1 +1,102 @@
-<h1>DASHBOARD {{userType}}</h1>
+<div class="mdl-grid">
+    <div class="mdl-cell mdl-cell--4-col hot-products" *ngIf="userType=='RETAILER'">
+        <i class="material-icons md-48">whatshot</i><span class="title">El mas comprado</span>
+        <br>
+        <br>
+        <mdl-card mdl-shadow="4" *ngFor="let product of mostBuyed">
+            <mdl-card-title [style.background-image]="getUrl(product.distributor.photo.url)">
+                <h2 mdl-card-title-text>{{product.product.name}}</h2>
+            </mdl-card-title>
+            <mdl-card-supporting-text>
+                <i class="material-icons md-32">attach_money</i><span>{{product.price}}</span>
+                <br>
+                <i class="material-icons md-32">local_shipping</i><span>{{product.sum_q}}</span>
+            </mdl-card-supporting-text>
+            <mdl-card-actions mdl-card-border>
+                <a routerLink="{{product.id}}" mdl-button-type="raised" mdl-button mdl-colored="accent" mdl-ripple>Ver producto</a>
+            </mdl-card-actions>
+            <mdl-card-menu>
+            <button mdl-button mdl-button-type="icon" mdl-ripple>
+                <mdl-icon>more_vert</mdl-icon>
+            </button>
+            </mdl-card-menu>
+        </mdl-card>
+    </div>
+    <div class="mdl-cell mdl-cell--4-col hot-products" *ngIf="userType=='DISTRIBUTOR'">
+        <i class="material-icons md-48">whatshot</i><span class="title">El mas vendido</span>
+        <br>
+        <br>
+        <mdl-card mdl-shadow="4" *ngFor="let product of mostSelled">
+            <mdl-card-title [style.background-image]="getUrl(product.distributor.photo.url)">
+                <h2 mdl-card-title-text>{{product.product.name}}</h2>
+            </mdl-card-title>
+            <mdl-card-supporting-text>
+                <i class="material-icons md-32">attach_money</i><span>{{product.price}}</span>
+                <br>
+                <i class="material-icons md-32">local_shipping</i><span>{{product.sum_q}}</span>
+            </mdl-card-supporting-text>
+            <mdl-card-actions mdl-card-border>
+                <a [routerLink]="['products',product.id]" mdl-button-type="raised" mdl-button mdl-colored="accent" mdl-ripple>Ver producto</a>
+            </mdl-card-actions>
+            <mdl-card-menu>
+            <button mdl-button mdl-button-type="icon" mdl-ripple>
+                <mdl-icon>more_vert</mdl-icon>
+            </button>
+            </mdl-card-menu>
+        </mdl-card>
+    </div>
+    <div class="mdl-cell mdl-cell--8-col my-favourites" *ngIf="userType=='RETAILER'">
+        <i class="material-icons md-48">star</i><span class="title">Mis distribuidores favoritos</span>
+        <br>
+        <br>
+        <swiper [config]="config">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide" *ngFor="let item of favourites">
+                    <mdl-card class="demo-card-square" mdl-shadow="4">
+                        <mdl-card-title mdl-card-expand [style.background-image]="getUrl(item.distributor.photo.url)">
+                            <h2 mdl-card-title-text>{{item.distributor.name}}</h2>
+                        </mdl-card-title>
+                        <mdl-card-supporting-text>
+                            <i class="material-icons md-32">mail_outline</i><span>{{item.distributor.email}}</span>
+                            <br>
+                            <i class="material-icons md-32">smartphone</i><span>{{item.distributor.phoneNumber}}</span>
+                        </mdl-card-supporting-text>
+                        <mdl-card-actions mdl-card-border>
+                            <a [routerLink]="['distributors',item.distributor.id]" mdl-button-type="raised" mdl-button mdl-colored="accent" mdl-ripple>Ver perfil</a>
+                        </mdl-card-actions>
+                    </mdl-card>
+                </div>
+            </div>
+            <!-- Add Arrows -->
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+        </swiper>
+    </div>
+    <div class="mdl-cell mdl-cell--8-col my-products" *ngIf="userType=='DISTRIBUTOR'">
+        <i class="material-icons md-48">star</i><span class="title">Mis productos</span>
+        <br>
+        <br>
+        <swiper [config]="config">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide" *ngFor="let product of myProducts">
+                    <mdl-card class="demo-card-square" mdl-shadow="4">
+                        <mdl-card-title mdl-card-expand [style.background-image]="getUrl(product.photo.url)">
+                            <h2 mdl-card-title-text>{{product.product.name}}</h2>
+                        </mdl-card-title>
+                        <mdl-card-supporting-text>
+                            <i class="material-icons md-32">attach_money</i><span>{{product.price}}</span>
+                            <br>
+                            <i class="material-icons md-32">fitness_center</i><span>{{product.product.weight}}</span>
+                        </mdl-card-supporting-text>
+                        <mdl-card-actions mdl-card-border>
+                            <a [routerLink]="['products',product.id]" mdl-button-type="raised" mdl-button mdl-colored="accent" mdl-ripple></a>Ver producto</a>
+                        </mdl-card-actions>
+                    </mdl-card>
+                </div>
+            </div>
+            <!-- Add Arrows -->
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+        </swiper>
+    </div>
+</div>
