--- a/src/app/dealers/dashboard/dashboard.component.scss
+++ b/src/app/dealers/dashboard/dashboard.component.scss
@@ -1,5 +1,6 @@
 mdl-card{
   margin: 0 auto;
+  width: 100%;
 }
 
 mdl-card-title{
@@ -20,4 +21,6 @@ mdl-textfield{
 
 .title{
     font-size: 35px;
+    text-align: center;
 }
+
