--- a/src/app/dealers/retailers/retailers-list/retailers-list.component.html
+++ b/src/app/dealers/retailers/retailers-list/retailers-list.component.html
@@ -31,7 +31,7 @@
   </mdl-card>
     
   </div>
-  <div class ="mdl-grid">
+  <div class ="mdl-cell--12-col">
      <pagination-controls (pageChange)="page = $event"
                           previousLabel= "Anterior"
                           nextLabel = "Siguiente"
