--- a/src/app/dealers/dealers.component.scss
+++ b/src/app/dealers/dealers.component.scss
@@ -1,7 +1,7 @@
 @import 'src/assets/sass/variables';
 
 #profile-pic{
-  width: 100%;
+  width:  100%;
   height: 100%;
   border-radius: 50%;
 }
@@ -120,14 +120,15 @@
 }
 
 .cart-actions{
-  background-color: #CCC;
+  background-color: #3F51B5;
+  color: #FFF;
   position: absolute;
   height: 4.5vh;
   width: 81.5%;
   z-index: 1000;
   border-top: 0.2px solid #CCC;
   bottom: 2vh;
-  button{
+  a{
     float: right;
   }
 }
@@ -150,4 +151,8 @@
     float: right;
     font-size: 40px !important;
   }
+}
+
+.empty-cart{
+  text-align: center;
 }
