--- a/src/app/dealers/products/product-list/product-list.component.html
+++ b/src/app/dealers/products/product-list/product-list.component.html
@@ -21,7 +21,7 @@
   </div>
   <div class="mdl-cell mdl-cell--4-col" *ngFor="let item of dataItems
                 |filteredOfferedProductsCategory : filtercategory
-                |filterOfferedProductsPrice :filterprice | paginate: { itemsPerPage: 5, currentPage: page }">
+                |filterOfferedProductsPrice :filterprice | paginate: { itemsPerPage: 9, currentPage: page }">
     <mdl-card mdl-shadow="4">
     <mdl-card-title [style.background-image]="getUrl(item.photo.url)">
       <h2 mdl-card-title-text>{{item.product.name}}</h2>
@@ -46,11 +46,10 @@
   </div>
 
 </div>
-      <div class ="mdl-grid">
+  <div class ="mdl-cell--12-col">
      <pagination-controls (pageChange)="page = $event"
                           previousLabel= "Anterior"
-                          nextLabel = "Siguiente"
-     >
+                          nextLabel = "Siguiente">
      </pagination-controls> 
   </div>
 <mdl-dialog #addProductDialog
